# Reddit-Devops-Agent

./: .env.example  .gitignore  pyproject.toml  run_demo.sh
Classifier/: candidates_from_themes.json  make_candidates.py  pyproject.toml
Classifier/action_plan_queue/processed/: 20260410T171541Z_plan.json  20260410T180349Z_plan.json  20260410T180800Z_plan.json
Classifier/data/chroma_opsera/: chroma.sqlite3
Classifier/sample_kb/messaging/: devops_leader_pitch.md
Classifier/sample_kb/product/: pipeline_orchestration.md  product_overview.md
Classifier/sample_kb/tech/: dora_metrics.md  security_and_compliance.md  tool_chain_integration.md
Classifier/src/opsera_classifier/: candidates.json  hitl.py  ingest.py  llm_classify.py  models.py  queue.py  score.py  settings.py
Generator/: pyproject.toml
Generator/src/opsera_generator/: cli.py  generate.py  models.py  queue.py  settings.py
KB/config/: ingest.yaml  subreddits.yaml
KB/data/chroma/: chroma.sqlite3
KB/data/raw/: posts.jsonl
KB/data/themes/: themes.json
KB/src/reddit_kb/: cli.py  embed_chroma.py  eval_checklist.py  logging_config.py  models.py  query_api.py  reddit_public.py  reddit_thread.py  settings.py  themes_llm.py
KB/tests/: test_models.py  test_reddit_thread.py
Slack-Queue/: .env.example  pyproject.toml  queue.json
Slack-Queue/src/opsera_slack/: app.py  handler.py  models.py  sender.py  settings.py  store.py
Slack-Queue/src/opsera_slack/templates/: dashboard.html
schedules/: crontab.example
src/reddit_kb/: __init__.py  config_loader.py  ingest.py  query_api.py  raw_store.py  reddit_client.py
